--- a/Book-Angular/src/app/shared/livro/livro.component.css
+++ b/Book-Angular/src/app/shared/livro/livro.component.css
@@ -29,3 +29,12 @@ section {
   justify-content: center;
   width: 120px;
 }
+input[type=text] {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid #fa7a7a;
+  
+}
